[gd_scene load_steps=2 format=2]

[ext_resource path="res://FeedBack/Main.gd" type="Script" id=1]

[node name="HTTPRequest" type="HTTPRequest"]
script = ExtResource( 1 )

[node name="HeartbeatTimer" type="Timer" parent="."]

[node name="InvalidSessionTimer" type="Timer" parent="."]
one_shot = true

[node name="FeedBack" type="WindowDialog" parent="."]
margin_right = 291.0
margin_bottom = 237.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="FeedBack"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Discord" type="Tabs" parent="FeedBack/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = 36.0
margin_bottom = 20.0

[node name="options" type="VBoxContainer" parent="FeedBack/TabContainer/Discord"]
anchor_top = -0.0177778
anchor_right = 0.869969
anchor_bottom = 0.866667
margin_top = 9.68575e-08
margin_right = -9.65595e-06
margin_bottom = -1.78814e-06
__meta__ = {
"_edit_use_anchors_": true
}

[node name="DM" type="HBoxContainer" parent="FeedBack/TabContainer/Discord/options"]
margin_right = 281.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="FeedBack/TabContainer/Discord/options/DM"]
margin_top = 3.0
margin_right = 122.0
margin_bottom = 17.0
text = "Via Direct Message"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DSCdm" type="Button" parent="FeedBack/TabContainer/Discord/options/DM"]
margin_left = 126.0
margin_right = 156.0
margin_bottom = 20.0
size_flags_vertical = 4
text = "Go"

[node name="JOIN" type="HBoxContainer" parent="FeedBack/TabContainer/Discord/options"]
margin_top = 24.0
margin_right = 281.0
margin_bottom = 44.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="FeedBack/TabContainer/Discord/options/JOIN"]
margin_top = 3.0
margin_right = 169.0
margin_bottom = 17.0
text = "Join our community server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DSCServer" type="Button" parent="FeedBack/TabContainer/Discord/options/JOIN"]
margin_left = 173.0
margin_right = 203.0
margin_bottom = 20.0
size_flags_vertical = 4
text = "Go"

[node name="RichTextLabel" type="RichTextLabel" parent="FeedBack/TabContainer/Discord/options"]
margin_top = 48.0
margin_right = 281.0
margin_bottom = 199.0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "[center]
Our discord tags and IDs:
sonic#7813 - 49297095049323264
NewTF#4548 - 708014517975777302
[/center]"
text = "
Our discord tags and IDs:
sonic#7813 - 49297095049323264
NewTF#4548 - 708014517975777302
"

[node name="Other" type="Tabs" parent="FeedBack/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="DscDMCreator" type="WindowDialog" parent="."]
visible = true
margin_right = 242.0
margin_bottom = 174.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="DscDMCreator"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text" type="HBoxContainer" parent="DscDMCreator/VBoxContainer"]
margin_right = 242.0
margin_bottom = 24.0

[node name="text" type="LineEdit" parent="DscDMCreator/VBoxContainer/text"]
margin_right = 58.0
margin_bottom = 24.0
size_flags_horizontal = 0
size_flags_vertical = 5
placeholder_text = "Text"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Expand" type="Button" parent="DscDMCreator/VBoxContainer/text"]
margin_left = 62.0
margin_right = 126.0
margin_bottom = 24.0
text = "EXPAND"

[node name="email" type="HBoxContainer" parent="DscDMCreator/VBoxContainer"]
margin_top = 28.0
margin_right = 242.0
margin_bottom = 52.0

[node name="email" type="LineEdit" parent="DscDMCreator/VBoxContainer/email"]
margin_right = 242.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 5
placeholder_text = "Your email"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Send" type="Button" parent="DscDMCreator"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -21.5
margin_top = -20.0
margin_right = 21.5
size_flags_horizontal = 4
size_flags_vertical = 2
text = "Send"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="HeartbeatTimer" to="." method="_on_HeartbeatTimer_timeout"]
[connection signal="timeout" from="InvalidSessionTimer" to="." method="_on_InvalidSessionTimer_timeout"]
[connection signal="pressed" from="FeedBack/TabContainer/Discord/options/DM/DSCdm" to="." method="_on_DSCdm_pressed"]
[connection signal="pressed" from="DscDMCreator/Send" to="." method="_on_Send_pressed"]
